fix footer images size on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -250,6 +250,10 @@ body {
                     img {
                         width: 50px;
                         height: 50px;
+                        @media screen and (max-width: 400px) {
+                            width: 30px;
+                            height: 30px;
+                        }
                     }
                 }
             }
